--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
         body{
             background-color: whitesmoke;
-            width:100vw;
         }
 
         .topbar{
@@ -73,11 +72,7 @@
         .privacy{
             display: flex;
             justify-content: center; 
-        }
-
-        .privacy img{
-            padding-right:3em;
-            padding-left: 3em;
+            text-align:center;
         }
     </style>
     <title>Password Vault</title>
